<resources>
    <string name="app_name">Apollo Music</string>
    <string name="web_client_id">155971439093-785ga9sio6omm2e31odnlf4avdd4arma.apps.googleusercontent.com</string>
    <string name="facebook_app_id">3099470110066765</string>
    <string name="fb_login_protocol_scheme">fb3099470110066765</string>

    <string name="login_with_google">Login with Google</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_welcome_title">Welcome to Apollo Music</string>

    <string name="home_menu_practice_title">Home</string>
    <string name="home_menu_create_title">Create</string>
    <string name="home_menu_social_title">Social</string>
    <string name="home_menu_stats_title">Stats</string>

    <string name="toolbar_title_practice">Practice</string>
    <string name="toolbar_title_create_practice">Create a practice</string>
    <string name="menu_save_practice">Save</string>
    <string name="dates_for_this_practice">Dates for this practice</string>
    <string name="practice_objectives_header">Your objectives</string>
    <string name="practice_notes_header">Notes</string>
    <string name="no_date_added_yet">No date has been added for this practice yet</string>

    <string name="dialog_done">Done</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_select_practice_dates_title">Select the dates for this practice</string>
    <string name="choose_the_objective_s_type">Choose the objective\'s type</string>
    <string name="exercise">Exercise</string>
    <string name="custom_objective_type">Custom</string>
    <string name="custom_objective_hint">Enter the name of your custom objective</string>
    <string name="criteria_improve_title">On which criteria you wish to improve ?</string>
    <string name="add_a_custom_criteria_to_the_list">Add a custom criteria to the list</string>
    <string name="objective_create_custom_header_hint">Or you can define your own custom objective to achieve by typing it in the text field below</string>
    <string name="next_step">Next step</string>
    <string name="pick_an_exercise">Pick an exercise you want to practice</string>
    <string name="criteria_selection_toolbar_label">Criteria selection</string>
    <string name="exercise_selection_toolbar_label">Pick an exercise</string>
    <string name="done">Done</string>

    <string name="dialog_add_criteria_title">Add a criteria</string>
    <string name="dialog_add_criteria_message">You can add your own criteria by typing in the text field below.</string>
    <string name="default_input_hint">Type here</string>
    <string name="confirm">Confirm</string>

    <string name="difficulty">Difficulty : %1$s</string>
    <string name="notes">Notes : %1$s</string>
    <string name="tempo">Tempo : %1$s</string>
    <string name="tempo_plus_suffix">Tempo : %1$s bpm.</string>
    <string name="practice_time">Practice time : %1$s</string>
    <string name="practice_time_plus_suffix">Practice time : %1$s min.</string>
    <string name="criteria">Criteria : %1$s</string>
    <string name="description">Description : %1$s</string>
    <string name="exercise_s">Exercise : %1$s</string>

    <string name="dialog_error_no_internet_title">No Internet Connection</string>
    <string name="dialog_error_no_internet_message">You do not seems to have a proper access to internet. This can cause some data related drawbacks like having the data not up to date or not being able to upload.</string>

    <string name="network_error_could_not_fetch_last_exercises">No internet connection. Exercises list might not be up to date.</string>
    <string name="default_tempo_header">Select the default tempo for this exercise</string>
    <string name="how_long_practice_exercise">How long you would like to practice this exercise ?</string>

    <string name="minute">\u0020 min.</string>
    <string name="bpm">\u0020 bpm.</string>
    <string name="no_objectives_has_been_added_for_this_practice_yet">No objectives has been added for this practice yet.</string>
    <string name="let_s_practice">Let\'s practice !</string>

    <string name="header_practice_today">Today\'s practice</string>
    <string name="header_practice_to_come">Practices to come</string>
    <string name="see_details">See details</string>
    <string name="no_practice_registered">It seems like you don\'t have any pratices registered yet.</string>
    <string name="no_practice_scheduled_for_today">No practices are planned today</string>
    <string name="no_practice_scheduled_in_future">No practices are planned in the future</string>

    <string name="practice_successfully_fetched">The practices list has been updated successfully.</string>
    <string name="practice_unsuccessfully_fetched">Sorry. There has been an error.</string>
    <string name="retry">Retry</string>
    <string name="your_objectives_for_this_practice">Your objectives for this practice</string>

    <string name="objective_header">Objective %1$s</string>
    <string name="title">Title : %1$s</string>
    <string name="to_do">Todo</string>
    <string name="no_notes">None.</string>
    <string name="start_exercise">Start exercise</string>
    <string name="desired_practice_time">Desired practice time : %1$s min.</string>
    <string name="current_practice_time">Current practice time : %1$s min.</string>
</resources>
