<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/actionHome"
        android:enabled="true"
        android:title="@string/home_menu_practice_title"
        android:icon="@drawable/ic_home"
        app:showAsAction="always" />
    <item
        android:id="@+id/actionCreate"
        android:enabled="true"
        android:icon="@drawable/ic_create"
        android:title="@string/home_menu_create_title"
        app:showAsAction="always" />
    <item
        android:id="@+id/actionSocial"
        android:enabled="true"
        android:icon="@drawable/ic_people"
        android:title="@string/home_menu_social_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/actionStats"
        android:enabled="true"
        android:icon="@drawable/ic_stats"
        android:title="@string/home_menu_stats_title"
        app:showAsAction="ifRoom" />
</menu>