<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_graph"
    app:startDestination="@+id/actionHome">

    <fragment
        android:id="@+id/actionHome"
        android:name="julienbirabent.apollomusic.ui.practice.list.PracticeListFragment"
        android:label="@string/toolbar_title_practice"
        tools:layout="@layout/fragment_practice_list">
        <action
            android:id="@+id/action_actionHome_to_practiceCreateFragment"
            app:destination="@id/practiceCreateFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@+id/actionHome" />
        <action
            android:id="@+id/go_to_practice_page"
            app:destination="@id/practiceDetailsFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/practiceCreateFragment"
        android:name="julienbirabent.apollomusic.ui.practice.create.PracticeCreateFragment"
        android:label="@string/toolbar_title_create_practice"
        tools:layout="@layout/fragment_practice_create">
        <action
            android:id="@+id/action_practiceCreateFragment_to_objectiveCreateFragment"
            app:destination="@id/objectiveCreateFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/objectiveCreateFragment"
        android:name="julienbirabent.apollomusic.ui.objective.ObjectiveCreateFragment"
        android:label="@string/choose_the_objective_s_type">
        <action
            android:id="@+id/action_objectiveCreateFragment_to_objectiveCriteriaSelectionFragment"
            app:destination="@id/objectiveCriteriaSelectionFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_objectiveCreateFragment_to_objectiveExerciseSelectionFragment"
            app:destination="@id/objectiveExerciseSelectionFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/objectiveCriteriaSelectionFragment"
        android:name="julienbirabent.apollomusic.ui.objective.criteria.ObjectiveCriteriaSelectionFragment"
        android:label="@string/criteria_selection_toolbar_label">
        <action
            android:id="@+id/action_objectiveCriteriaSelectionFragment_to_practiceCreateFragment"
            app:destination="@id/practiceCreateFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/practiceCreateFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/objectiveExerciseSelectionFragment"
        android:name="julienbirabent.apollomusic.ui.objective.ObjectiveExerciseSelectionFragment"
        android:label="@string/exercise_selection_toolbar_label">
        <action
            android:id="@+id/action_objectiveExerciseSelectionFragment_to_objectiveCreateFragment"
            app:destination="@id/objectiveCreateFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/practiceDetailsFragment"
        android:name=""
        android:label="PracticeDetailsFragment"
        tools:layout="@layout/fragment_practice_details">
        <argument
            android:name="practiceId"
            android:defaultValue="-1"
            app:argType="integer" />
    </fragment>

</navigation>