<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="julienbirabent.apollomusic.ui.objective.ObjectiveCreateViewModel" />

        <variable
            name="viewModel"
            type="julienbirabent.apollomusic.ui.objective.ObjectiveCreateViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/create_objective_type_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/choose_the_objective_s_type"
            android:textAlignment="center"
            android:textColor="@color/text_header_1"
            android:textSize="@dimen/text_size_med"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/objectives_create_button_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_objective_type_header">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/create_objective_exercise_button"
                style="@style/MaterialButtonOutlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:backgroundTint="@color/amber_300"
                android:padding="8dp"
                android:text="@string/exercise"
                android:textColor="@color/text_header_1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/create_objective_custom_button"
                style="@style/MaterialButtonOutlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:backgroundTint="@color/green_fresh_herb"
                android:padding="8dp"
                android:text="@string/custom_objective_type"
                android:textColor="@color/text_header_1" />

        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:animateLayoutChanges="true"
            android:hint="@string/custom_objective_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/objectives_create_button_container">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_objective_custom_text_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textImeMultiLine"
                android:padding="8dp" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>